Prevent the user icons from stretching

--- a/styles.css
+++ b/styles.css
@@ -170,6 +170,7 @@ p {
     max-width: 400px;
 
     display: flex;
+    align-items: flex-start;
     gap: 12px;
 }
 
